# parglare

./: .gitignore  .travis.yml  2018-03-28-Note-12-29.xoj  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Design notes.xoj  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  grammar_language.md.~eddd2dc5~  index.html  justfile  main_test.py  mkdocs.yml  pyproject.toml  requirements_dev.txt  requirements_test.txt  runtests.sh  search.html  setup.cfg  setup.py  sitemap.xml  tox.ini  travis_pypi_setup.py  versions.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci-linux-ubuntu.yml
0.10/actions/: index.html
0.10/common/: index.html
0.12.0/: index.html
0.12.0/grammar_language_canonical/: index.html
0.12.0/recognizers/: index.html
0.13.0/getting_started/: index.html
0.13.0/grammar_language/: index.html
0.13.0/parser/: index.html
0.13.0/pglr/: index.html
0.14.0/: 404.html
0.14.0/common/: index.html
0.14.0/getting_started/: index.html
0.14.0/handling_errors/: index.html
0.14.0/lr_parsing/: index.html
0.14.0/parser/: index.html
0.14.0/recognizers/: index.html
0.15.0/: 404.html  index.html  sitemap.xml
0.15.0/actions/: index.html
0.15.0/common/: index.html
0.15.0/debugging/: index.html
0.15.0/disambiguation/: index.html
0.15.0/grammar/: index.html
0.15.0/grammar_language/: index.html
0.15.0/grammar_modularization/: index.html
0.15.0/handling_errors/: index.html
0.15.0/lr_parsing/: index.html
0.15.0/parse_forest_trees/: index.html
0.15.0/parser/: index.html
0.15.0/pglr/: index.html
0.15.0/recognizers/: index.html
0.15.0/search/: search_index.json
0.16.0/: 404.html  getting_started.org  grammar_language.org  index.html  search.html
0.16.0/actions/: index.html
0.16.0/common/: index.html
0.16.0/grammar/: index.html
0.16.0/grammar_language/: index.html
0.16.0/images/: forest.dot
0.16.0/lr_parsing/: index.html
0.16.0/pglr/: index.html
0.16.0/search/: search_index.json
0.17.0/: 404.html  index.html
0.17.0/grammar_modularization/: index.html
0.17.0/images/: calc.pgt
0.18.0/: index.html
0.18.0/getting_started/: index.html
0.18.0/grammar/: index.html
0.18.0/grammar_language/: index.html
0.18.0/lr_parsing/: index.html
0.18.0/parser/: index.html
0.18.0/search/: search_index.json
0.19.0/: index.html
0.19.0/actions/: index.html
0.19.0/disambiguation/: index.html
0.19.0/grammar/: index.html
0.19.0/grammar_language/: index.html
0.19.0/lr_parsing/: index.html
0.19.0/parse_forest_trees/: index.html
0.19.0/pglr/: index.html
0.20.0/: index.html
0.20.0/parser/: index.html
0.20.0/recognizers/: index.html
0.20.0/search/: search_index.json
0.21.0/: index.html
0.21.0/grammar_language/: index.html
0.21.0/handling_errors/: index.html
0.21.0/images/: calc.pg.dot
0.21.0/search/: search_index.json
0.6/: index.html
0.6/common/: index.html
0.6/debugging/: index.html
0.6/disambiguation/: index.html
0.6/glr/: index.html
0.6/grammar_modularization/: index.html
0.6/parse_trees/: index.html
0.6/recognizers/: index.html
0.7/: style.css
0.7/grammar_language/: index.html
0.7/pglr/: index.html
0.7/recognizers/: index.html
0.8/: index.html
0.8/common/: index.html
0.8/getting_started/: index.html
0.8/glr/: index.html
0.8/search/: search_index.json
0.9/: index.html
0.9/disambiguation/: index.html
0.9/images/: calc.pg
0.9/parse_trees/: index.html
0.9/pglr/: index.html
about/CONTRIBUTING/: index.html
about/LICENSE/: index.html
actions/: index.html
conflicts/: index.html
debugging/: index.html
development/: 404.html  index.html  sitemap.xml
development/handling_errors/: index.html
development/images/: calc.pg.dot
development/parser/: index.html
development/recognizers/: index.html
development/search/: search_index.json
disambiguation/: index.html
docs/: Makefile  actions.md  common.md  conf.py  conflicts.md  debugging.md  disambiguation.md  getting_started.md  grammar.md  grammar_language.md  grammar_modularization.md  handling_errors.md  index.md  index.rst  installation.rst  lr_parsing.md  make.bat  parse_forest_trees.md  parse_trees.md  parser.md  pglr.md  recognizers.md  recovery.md  style.css  usage.rst
docs/about/: CONTRIBUTING.md  LICENSE.md
docs/release_notes/: release_0_14.md  release_0_15.md
examples/: quick_intro.py
examples/bibtex/: bibtex.pg  bibtex.py  test.bib
examples/c/: README.md  c.pg  c2.pg  c_example.py
examples/calc/: calc.py
getting_started/: index.html
grammar/: index.html
grammar_language/: index.html
grammar_modularization/: index.html
handling_errors/: index.html
latest/: index.html  search.html  sitemap.xml
lr_parsing/: index.html
mkdocs/: search_index.json
parglare/: __init__.py  actions.py  builder.py  cli.py  closure.py  common.py  errors.py  exceptions.py  export.py  glr.py  grammar.py  lalr.py  lang.py  parser.py  recognizers.py  slr.py  tables.py  termui.py  trees.py  version.py
parse_trees/: index.html
parser/: index.html
pglr/: index.html
recognizers/: index.html
recovery/: index.html
scripts/: parglare_qtree.py
stable/: 404.html  index.html  search.html  sitemap.xml
tests/: calc.pg  calc_actions.py  expression_grammar.py  test_actions.py  test_grammar.py  test_lexical_disambiguation.py  test_load_from_file.py  test_parglare.py  test_parser_construction.py  test_parsing.py  test_parsing_errors.py  test_regex_terminals.py  test_slr_conflict.py  test_terminals.py  test_tree_str.py  test_whitespaces.py
(+330 files in other folders)
