[project]
name = "parglare"
version = "0.18.0"
description = "A pure Python LR/GLR parser"
authors = [
    {name = "Igor R. Dejanović", email = "igor.dejanovic@gmail.com"},
]
maintainers = [
    {name = "Igor R. Dejanović", email = "igor.dejanovic@gmail.com"},
]
readme = "README.rst"
license = {text = "MIT"}
keywords = ["parser", "lr", "glr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

requires-python = ">=3.8, <3.13"
dependencies = [
    "click >=7.0, <9.0"
]

[project.urls]
Homepage = "https://github.com/igordejanovic/parglare"
Repository = "https://github.com/igordejanovic/parglare"
Changelog = "https://github.com/igordejanovic/parglare/blob/master/CHANGELOG.md"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[tool.flit.module]
name = "parglare"

[tool.flit.sdist]
exclude = ["**/.*"]

[project.optional-dependencies]
dev = [
    "ruff",
    "flit",
    "mkdocs",
    "mike",
]

test = [
    "ruff",
    "coverage",
    "coveralls",
    "pytest",
]

[project.scripts]
pglr = "parglare.cli:pglr"

[tool.ruff]
line-length = 90
indent-width = 4

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
