[metadata]
name = parglare
author = Igor R. Dejanovic
author_email = igorREPLACEWITHDOTdejanovic@gmail.com
license = MIT
description = A pure Python Scannerless LR/GLR parser
keywords = parglare
url = https://github.com/igordejanovic/parglare
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = parglare, parglare.tables
zip_safe = False
install_requires = click >=7.0, <8.0
include_package_data = True
package_dir =
    parglare = parglare
test_suite = tests
setup_requires = setuptools_scm;


[options.extras_require]
dev =
    wheel
    mkdocs
    mike
    twine
test =
     flake8
     coverage
     coveralls
     pytest

[options.entry_points]
console_scripts = pglr = parglare.cli:pglr

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 90
exclude = .git/*,.eggs/*,
          parglare/six.py,
          build/*,venv/*
